fixed side drawer component spacing and css

--- a/client/src/styles/components/_side-drawer.scss
+++ b/client/src/styles/components/_side-drawer.scss
@@ -1,13 +1,14 @@
 .side-drawer {
 	width: 50%;
 	min-width: 20rem;
-	height: 100%;
+	height: 100vh;
 	background-image: linear-gradient(
 		to bottom right,
 		var(--primary-color),
 		var(--secondary-color)
 	);
 	padding: .5rem;
+	padding-top: 0;
 	box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.9);
 	position: fixed;
 	top: 0;
@@ -20,15 +21,15 @@
 	&__avatar-section {
 		height: 30%;
 
-		&::after {
-			content: '';
-			width: 100%;
-			height: 100%;
+		// &::after {
+		// 	content: '';
+		// 	width: 100%;
+		// 	height: 100%;
 
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
+		// 	position: absolute;
+		// 	top: 0;
+		// 	left: 0;
+		// }
 	}
 
 	&__nav-section {
@@ -134,7 +135,6 @@
 		width: 100%;
 		height: calc(100% + 55px);
 		position: relative;
-		z-index: 100;
 
 		& ul {
 			height: 100%;
